2011-10-08  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (mintimes_k, maxtimes_k): New keyword variables.
	(match_line): Implemented :mintimes and :maxtimes, changing
	the semantics of :times.
	(match_files): Likewise.
	(match_init): New keyword variables initialized.

	* txr.1: Updated.

2011-10-08  Kaz Kylheku  <kaz@kylheku.com>

	* HACKING: Formatting.

2011-10-07  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (match_files): Fixed spectacular bug in function calling,
	dating back to before October 2009 when txr was put into git.
	Basically, unbound variables were not handled right after
	the function return, due to the increment step being wrongly
	written as ``piter = cdr(aiter)'' in the for loop that processes the
	ub_p_a_pairs. Evil cut and paste!

2011-10-07  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (greedy_k): New keyword symbol variable.
	(match_line): Greedy skip implemented.
	(match_files): Likewise.
	(match_init): New keyword symbol variable initialized.

	* txr.1: Updated.

2011-10-07  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (eol_s): New symbol variable.
	(obj_init): New variable initialized.

	* lib.h (eol_s): Declared.

	* match.c (match_line): Implemented horizontal skip as and
	new eol directive.
	(match_lines): Vertical skip defers to horizontal skip if
	there is trailing material.

	* txr.1: Updated.

2011-10-07  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (flatten_helper): Function removed.
	(flatten): Recurse directly, using func_n1.

2011-10-07  Kaz Kylheku  <kaz@kylheku.com>

	* txr.1: fxed wrong word.

2011-10-06  Kaz Kylheku  <kaz@kylheku.com>

	Extending syntax to allow for @VAR and @(...) forms inside
	nested lists. This is in anticipation of future features.

	* lib.c (expr_s): New symbol variable.
	(obj_init): expr_s initialized.

	* lib.h (expr_s): Declared.

	* match.c (dest_bind): Now takes linenum. Tests for the meta-syntax
	denoted by the system symbols var_s and expr_s, and throws an
	error.